--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
-    "express": "^4.18.1"
-  }
+    "express": "^4.18.1",
+    "mongoose": "^6.3.5",
+    "slugify": "^1.6.5"
+  },
+  "type": "commonjs"
 }
