--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "body-parser": "^1.20.0",
+    "download": "^8.0.0",
     "express": "^4.18.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.3.5",
-    "slugify": "^1.6.5"
+    "slugify": "^1.6.5",
+    "xml2js": "^0.4.23"
   },
-  "type":"module"
+  "type": "module"
 }
