--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.1",
     "fs": "^0.0.1-security",
     "mongoose": "^6.3.5",
+    "mongoose-paginate-v2": "^1.6.3",
     "slugify": "^1.6.5",
     "xml2js": "^0.4.23"
   },
