--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,12 @@
             "request": "launch",
             "name": "Run Scraper",
             "program" : "${workspaceFolder}\\index.js"
+        },
+		{
+            "type": "node",
+            "request": "launch",
+            "name": "Run Action Check",
+            "program" : "${workspaceFolder}\\crawler\\actions\\index.js"
         }
 	]
 }
