--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "mongoose": "^6.3.5",
     "mongoose-paginate-v2": "^1.6.3",
     "puppeteer": "^14.3.0",
+    "puppeteer-extra": "^3.2.3",
+    "puppeteer-extra-plugin-adblocker": "^2.12.0",
+    "puppeteer-extra-plugin-stealth": "^2.9.0",
     "slugify": "^1.6.5",
+    "user-agents": "^1.0.1041",
     "xml2js": "^0.4.23"
   },
   "type": "module"
